--- a/_sass/_devices.scss
+++ b/_sass/_devices.scss
@@ -1,8 +1,21 @@
+.square {
+  // width: 33vw;
+  // height: 33vw;
+
+  td {
+    font-family: sans-serif;
+    font-size: 5.9vw;
+    // width: 15vw;
+    line-height: 5.9vw;
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 1vw;
+  }
+}
 
 //
 // DEVICES
 //
-
 .device {
   position: relative;
   background-size: cover;
@@ -19,29 +32,29 @@
   width: 240px;
   height: 426.66px;
   padding-bottom: 0;
-    margin-left: 24px;
-    margin-top: 90.67px;
-    overflow: hidden;
+  margin-left: 24px;
+  margin-top: 90.67px;
+  overflow: hidden;
 }
-// Video
 
+// Video
 .video-container iframe {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 //
 // iPhone SE Silver Vertical
 //
-
 .device.iphone-se-silver-vertical {
   width: 288px;
   height: 608px;
   background-image: url(../../images/devices/iphone-se-silver-vertical.png);
 }
+
 .device.iphone-se-silver-vertical .app-screenshot {
   top: 91px;
   left: 25px;
@@ -51,12 +64,12 @@
 //
 // iPhone SE Space Gray Vertical
 //
-
 .device.iphone-se-space-gray-vertical {
   width: 288px;
   height: 608px;
   background-image: url(../../images/devices/iphone-se-space-gray-vertical.png);
 }
+
 .device.iphone-se-space-gray-vertical .app-screenshot {
   top: 91px;
   left: 25px;
@@ -66,12 +79,12 @@
 //
 // iPod Touch Blue Vertical
 //
-
 .device.ipod-touch-blue-vertical {
   width: 291px;
   height: 614px;
   background-image: url(../../images/devices/ipod-touch-blue-vertical.png);
 }
+
 .device.ipod-touch-blue-vertical .app-screenshot {
   top: 87px;
   left: 23px;
